feat: socketio (#9)
* feat: groups

* feat: socketio
